# azure-sdk-rust

./: .gitignore  Cargo.toml  README.md
docs/: search-index.js
docs/azure_sdk_rust/: index.html  sidebar-items.js
docs/azure_sdk_rust/azure/: index.html  sidebar-items.js
docs/azure_sdk_rust/azure/core/: ContentMD5.t.html  HTTPMethod.t.html  IfMatch.t.html  IfNoneMatch.t.html  XMSClientRequestId.t.html  XMSDate.t.html  XMSLeaseAction.t.html  XMSLeaseBreakPeriod.t.html  XMSLeaseDuration.t.html  XMSLeaseDurationSeconds.t.html  XMSLeaseId.t.html  XMSLeaseState.t.html  XMSLeaseStatus.t.html  XMSProposedLeaseId.t.html  XMSRange.t.html  XMSRangeGetContentMD5.t.html  XMSVersion.t.html  canonicalize_header.v.html  canonicalized_resource.v.html  encode_str_to_sign.v.html  enum.HTTPMethod.html  fn.canonicalize_header.html  fn.canonicalized_resource.html  fn.encode_str_to_sign.html  fn.generate_authorization.html  fn.perform_request.html  fn.string_to_sign.html  generate_authorization.v.html  index.html  perform_request.v.html  sidebar-items.js  struct.Authorization.html  struct.ContentMD5.html  struct.ETag.html  struct.IfMatch.html  struct.IfNoneMatch.html  struct.Range.html  struct.XMSClientRequestId.html  struct.XMSDate.html  struct.XMSLeaseAction.html  (+10 more)
docs/azure_sdk_rust/azure/service_bus/: index.html  sidebar-items.js
docs/azure_sdk_rust/azure/storage/: index.html  (+1 more)
docs/implementors/log/: trait.Log.js
docs/implementors/rand/: trait.Rand.js  trait.Rng.js  trait.SeedableRng.js
examples/: simple.rs
src/: lib.rs
src/azure/: mod.rs
src/azure/core/: mod.rs
(+223 files in other folders)
